--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "hourseshyzc",
-    "description": "hourseshyzc",
+    "name": "waterhanshyzc",
+    "description": "waterhanshyzc",
     "keywords": ["tor"],
     "env": {
         "AA": {
@@ -12,23 +12,23 @@
             "value": "24b4b1e1-7a89-45f6-858c-242cf53b5bdb"
         },
         "CADDYIndexPage": {
-            "description": "自定义CADDY部署完成后点击View的显示页面，参考：https://github.com/crr3wr6de/hourseshyzc/blob/master/etc/CADDYIndexPage.md",
+            "description": "自定义CADDY部署完成后点击View的显示页面，参考：https://github.com/iryo5risw/waterhanshyzc/blob/master/etc/CADDYIndexPage.md",
             "value": "https://github.com/AYJCSGM/mikutap/archive/master.zip"
         },
         "CONFIGCADDY": {
             "description": "自定义网络地址读取配置运行CADDY，不熟悉CADDY配置的请勿修改",
-            "value": "https://raw.githubusercontent.com/crr3wr6de/hourseshyzc/main/etc/Caddyfile"
+            "value": "https://raw.githubusercontent.com/iryo5risw/waterhanshyzc/main/etc/Caddyfile"
         },
         "CONFIGXRAY": {
             "description": "自定义网络地址读取配置运行xray，不熟悉xray配置的请勿修改",
-            "value": "https://raw.githubusercontent.com/crr3wr6de/hourseshyzc/main/etc/xray.json"
+            "value": "https://raw.githubusercontent.com/iryo5risw/waterhanshyzc/main/etc/xray.json"
         },
         "StoreFiles": {
             "description": "自定义网络地址读取存储文件列表",
-            "value": "https://raw.githubusercontent.com/crr3wr6de/hourseshyzc/main/etc/StoreFiles"
+            "value": "https://raw.githubusercontent.com/iryo5risw/waterhanshyzc/main/etc/StoreFiles"
         }
     },
-    "website": "https://github.com/crr3wr6de/hourseshyzc",
-    "repository": "https://github.com/crr3wr6de/hourseshyzc",
+    "website": "https://github.com/iryo5risw/waterhanshyzc",
+    "repository": "https://github.com/iryo5risw/waterhanshyzc",
     "stack": "container"
 }
